# gdtv-search-poc

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
development/: get_wisper.sh
notebooks/: example.ipynb
src/explain/: openai.py
src/search/: docs.py  index.py
src/transcribe/: preprocessing.py  transcriber.py  types.py
